# sapphire-bot

./: .env.template  README.md  pyproject.toml
src/leafgreen_bot/: config.py
src/leafgreen_bot/gba_interface/: __init__.py  gba_interface.py
src/leafgreen_bot/interface/: __init__.py  interface.py
src/sapphire_bot/: config.py
src/sapphire_bot/gba_interface/: gba_interface.py
