[project]
name = "leafgreen_bot"
version = "0.0.1"
description = "A bot designed to complete Pokémon LeafGreen."
authors = [{ name = "Joshua Kouri" }]
# Other Python version have not been tested.
requires-python = "~=3.14"
dependencies = [
    "dotenv~=0.9.9"
]

[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",    # Required to run tests.
]
